icell/tests/compile_fail/generative/distinct_lifetimes.stderr
error[E0597]: `bar` does not live long enough
  --> $DIR/distinct_lifetimes.rs:5:5
   |
5  |     gen::new!(bar);
   |     ^^^^^^^^^^^^^^^ borrowed value does not live long enough
...
10 | }
   | -
   | |
   | `bar` dropped here while still borrowed
   | borrow might be used here, when `enforce_unique_lifetime` is dropped and runs the `Drop` code for type `icell::generative::EnforceUniqueLifetime`
   |
   = note: values in a scope are dropped in the opposite order they are defined
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
